# rc-mouse

./: .clangd  .gitignore  CMakeLists.txt  README.md  app.overlay  compile_commands.json  prj.conf
.cache/clangd/index/: caputed_ir_1.h.42F2FED634977B22.idx  main.c.C9AA393892CE79D4.idx  main.c.ED78E472CD4F5108.idx  mouse-hid.c.9DF8EAB4D4ECCDD1.idx  nec-decoder.c.A840126AE09947D3.idx  nec-decoder.h.F3D4B9935185F58D.idx  usbd.h.7C3043F502DAE05E.idx
src/: ir-input.c  ir-input.h  main.c  mouse-hid.c  mouse-hid.h  nec-decoder.c  nec-decoder.h  rc-command.h  rc-mouse.c  rc-mouse.h
testing/: CMakeLists.txt  caputed_ir_1.h  main.c  testcase.yaml
